--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -91,7 +91,7 @@ fos_rest:
             html: true
     format_listener:
         rules:
-           - { path: ^/formated , priorities: [json], fallback_format: 'json'} 
+           - { path: /json$ , priorities: [json], fallback_format: 'json'} 
            - { path: ^/, priorities: [html], fallback_format: 'html'}
          
 
@@ -139,8 +139,8 @@ nelmio_cors:
             hosts: []
             origin_regex: false
         paths:
-            '^/v1/formated/':
+            '/json$':
                 allow_origin: ['*']
                 allow_headers: ['*']
                 allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
-                max_age: 3600
+                max_age: 7600
