--- a/src/AppBundle/Resources/config/serializer/Entity.PointVente.yml
+++ b/src/AppBundle/Resources/config/serializer/Entity.PointVente.yml
@@ -7,4 +7,7 @@ AppBundle\Entity\PointVente:
             groups: ['pointvente','commende']
         telephone:
             groups: ['pointvente']
+        description:
+            groups: ['pointvente']
+
               
