export to excel

--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -24,8 +24,8 @@ homepage:
     methods:  GET
 
 loadrh:
-    path:     /loadrh
-    defaults: { _controller: "AppBundle:App:loadrh" }
+    path:     /perf
+    defaults: { _controller: "AppBundle:App:ventePeriodeExcel" }
     methods:  GET
 
 
