export to excel

--- a/src/AppBundle/Resources/config/serializer/Entity.Ligne.yml
+++ b/src/AppBundle/Resources/config/serializer/Entity.Ligne.yml
@@ -7,4 +7,6 @@ AppBundle\Entity\Ligne:
             groups: ['commende','ligne']
         quantite:
             groups: ['commende','ligne']
+        souscripteur:
+            groups: ['ligne']    
               
